--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&display=swap");
-.subtitle, .header-nav__link, .our-salon__text, .blog__item .blog__item-text, .subscribe__list-item, .footer-info__list-link, .footer-info__contact-link, .footer-info__text, .footer-bottom__copyright, .footer-bottom__link {
+.subtitle, .header-nav__link, .our-salon__text, .blog__item .blog__item-text, .subscribe__list-item, .product-filter .jq-selectbox__select, .product-card__subtitle, .product-card__price, .footer-info__list-link, .footer-info__contact-link, .footer-info__text, .footer-bottom__copyright, .footer-bottom__link {
   font-family: "Gilroy-Regular, sans-serif";
   font-style: normal;
   font-weight: 400;
 }
 
-.header__btn, .second-screen__list-link, .second-screen__category-item .second-screen__caterories-text, .our-salon__link, .subscribe__input::-webkit-input-placeholder, .subscribe__btn, .footer-info__title {
+.header__btn, .second-screen__list-link, .second-screen__category-item .second-screen__caterories-text, .our-salon__link, .subscribe__input::-webkit-input-placeholder, .subscribe__btn, .product__more, .footer-info__title {
   font-family: "Gilroy-Regular, sans-serif";
   font-style: normal;
   font-weight: 500;
 }
 
-.header__btn, .second-screen__list-link, .second-screen__category-item .second-screen__caterories-text, .our-salon__link, .subscribe__input:-ms-input-placeholder, .subscribe__btn, .footer-info__title {
+.header__btn, .second-screen__list-link, .second-screen__category-item .second-screen__caterories-text, .our-salon__link, .subscribe__input:-ms-input-placeholder, .subscribe__btn, .product__more, .footer-info__title {
   font-family: "Gilroy-Regular, sans-serif";
   font-style: normal;
   font-weight: 500;
 }
 
-.header__btn, .second-screen__list-link, .second-screen__category-item .second-screen__caterories-text, .our-salon__link, .subscribe__input::-ms-input-placeholder, .subscribe__btn, .footer-info__title {
+.header__btn, .second-screen__list-link, .second-screen__category-item .second-screen__caterories-text, .our-salon__link, .subscribe__input::-ms-input-placeholder, .subscribe__btn, .product__more, .footer-info__title {
   font-family: "Gilroy-Regular, sans-serif";
   font-style: normal;
   font-weight: 500;
 }
 
-.header__btn, .second-screen__list-link, .second-screen__category-item .second-screen__caterories-text, .our-salon__link, .subscribe__input::placeholder, .subscribe__btn, .footer-info__title {
+.header__btn, .second-screen__list-link, .second-screen__category-item .second-screen__caterories-text, .our-salon__link, .subscribe__input::placeholder, .subscribe__btn, .product__more, .footer-info__title {
   font-family: "Gilroy-Regular, sans-serif";
   font-style: normal;
   font-weight: 500;
 }
 
-.footer-bottom__done {
+.product-card__title, .footer-bottom__done {
   font-family: "Gilroy-Regular, sans-serif";
   font-style: normal;
   font-weight: 600;
@@ -95,6 +95,27 @@ a {
   font-family: "Gilroy", sans-serif;
 }
 
+html,
+body {
+  height: 100%;
+}
+
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
 .container {
   max-width: 1180px;
   margin: 0 auto;
@@ -117,6 +138,14 @@ a {
   line-height: 140%;
   text-align: center;
   color: #333;
+}
+
+.header-page {
+  background: #333;
+}
+
+.header-page .header-nav {
+  padding: 27px 0 31px;
 }
 
 .header {
@@ -659,6 +688,182 @@ a {
   text-transform: uppercase;
   color: #fff;
   cursor: pointer;
+}
+
+.product {
+  padding: 100px 0 75px;
+}
+
+.product__more {
+  display: block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 15px 35px;
+  background: #333;
+  border: 1px solid #fff;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #fff;
+  margin: 30px auto 0;
+}
+
+.product-filter {
+  padding-bottom: 30px;
+}
+
+.product-filter__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.product-filter__label {
+  width: 160px;
+}
+
+.product-filter .jq-selectbox {
+  width: 160px;
+}
+
+.product-filter .jq-selectbox__select {
+  height: 34px;
+  padding: 0 45px 0 0px;
+  border: none;
+  border-bottom: 1px solid #d6d6d6;
+  border-radius: 0px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  text-shadow: none;
+  background: #fff;
+  font-size: 16px;
+  line-height: 150%;
+  color: #333;
+}
+
+.product-filter .jq-selectbox__select-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+}
+
+.product-filter .jq-selectbox__trigger {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 34px;
+  height: 100%;
+  background-image: url("../img/icon/arrow-down.png");
+  background-repeat: no-repeat;
+  background-position-y: center;
+  background-position-x: right;
+  border: none;
+  width: 12px;
+  -webkit-transition: -webkit-transform 0.6s;
+  transition: -webkit-transform 0.6s;
+  transition: transform 0.6s;
+  transition: transform 0.6s, -webkit-transform 0.6s;
+}
+
+.product-filter .active {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  -webkit-transition: -webkit-transform 0.6s;
+  transition: -webkit-transform 0.6s;
+  transition: transform 0.6s;
+  transition: transform 0.6s, -webkit-transform 0.6s;
+}
+
+.product-filter .jq-selectbox__trigger-arrow {
+  display: none;
+}
+
+.product-filter .jq-selectbox.focused .jq-selectbox__select {
+  border: none;
+  border-bottom: 1px solid #d6d6d6;
+}
+
+.product-inner {
+  padding-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  row-gap: 120px;
+  padding: 30px 0;
+}
+
+.product-card {
+  max-width: 350px;
+  width: 100%;
+  border: 1px solid #d6d6d6;
+  padding: 35px;
+}
+
+.product-card__images {
+  width: 280px;
+  height: 220px;
+  overflow: hidden;
+  margin-bottom: 25px;
+}
+
+.product-card__img {
+  width: 280px;
+  height: 220px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.product-card__info {
+  text-align: center;
+  color: #333;
+}
+
+.product-card__subtitle {
+  font-size: 16px;
+  line-height: 150%;
+  margin-bottom: 10px;
+}
+
+.product-card__title {
+  font-size: 24px;
+  line-height: 140%;
+  margin-bottom: 15px;
+}
+
+.product-card__price {
+  display: inline-block;
+  padding: 10px 20px;
+  background: #333;
+  border: 1px solid #fff;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.box {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(249, 249, 249, 0)), color-stop(82.29%, #F9F9F9));
+  background: linear-gradient(180deg, rgba(249, 249, 249, 0) 0%, #F9F9F9 82.29%);
+}
+
+#more {
+  display: none;
 }
 
 .footer {
