--- a/scss/style.scss
+++ b/scss/style.scss
@@ -526,6 +526,271 @@
     color: #fff;
   }
 }
+.product-info {
+  padding: 75px 0 150px;
+  &__inner {
+    display: flex;
+    justify-content: center;
+  }
+  &__info {
+    max-width: 540px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  &__text {
+    @extend %gilroy-400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #333;
+    position: relative;
+    &::after {
+      content: "";
+      position: absolute;
+      background: linear-gradient(180deg, rgba(249, 249, 249, 0) 0%, #f9f9f9 82.29%);
+      left: 0;
+      right: 0;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      transform: rotate(180deg);
+      bottom: 0;
+      top: 0;
+      transform: matrix(1, 0, 0, 1, 0, 0);
+      z-index: 0;
+      opacity: 0.7;
+    }
+  }
+  &__btn {
+    border: 1px dashed #333;
+    cursor: pointer;
+    @extend %gilroy-500;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #333333;
+    padding: 0;
+    background: transparent;
+    position: absolute;
+  }
+  &__content {
+    max-width: 285px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    row-gap: 30px;
+    flex-wrap: wrap;
+    margin: 0 auto;
+  }
+  &__item {
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  &__images {
+    width: 70px;
+    height: 70px;
+    margin-bottom: 15px;
+  }
+  &__img {
+    width: 70px;
+    height: 70px;
+  }
+  &__item-text {
+    @extend %gilroy-400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #000;
+  }
+}
+#more {
+  display: none;
+}
+.cart {
+  padding: 27px 0 60px;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+.cart-desc {
+  max-width: 540px;
+  width: 100%;
+  border: 1px solid #d6d6d6;
+  padding: 10px;
+  &__inner {
+    border: 1px solid #d6d6d6;
+    padding: 40px 30px;
+  }
+  &__title {
+    @extend %gilroy-500;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #333;
+    margin-bottom: 30px;
+  }
+  &__info {
+    display: flex;
+    align-items: center;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #d6d6d6;
+    margin-bottom: 30px;
+  }
+  &__item {
+    display: flex;
+    align-items: center;
+    margin-right: 25px;
+  }
+  &__item-title,
+  &__item-tag {
+    @extend %gilroy-400;
+    font-size: 14px;
+    line-height: 150%;
+    color: #979797;
+  }
+  &__item-title {
+    margin-right: 15px;
+  }
+  &__text {
+    @extend %gilroy-400;
+    font-size: 14px;
+    line-height: 150%;
+    color: #333;
+    margin-bottom: 30px;
+  }
+  &__number {
+    @extend %gilroy-600;
+    font-size: 24px;
+    line-height: 29px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #333;
+    margin-bottom: 30px;
+  }
+  &__list {
+    display: flex;
+    align-items: center;
+  }
+  &__buy,
+  &__add {
+    padding: 10px 20px;
+    @extend %gilroy-400;
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+  }
+  &__buy {
+    background: #333333;
+    border: 1px solid #fff;
+    color: #fff;
+    margin-right: 30px;
+  }
+  &__add {
+    background: #f9f9f9;
+    border: 1px solid #333333;
+    color: #333;
+  }
+}
+.cart-slider {
+  width: 540px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+  &__big {
+    width: 540px;
+    height: 430px;
+  }
+  &__big-item {
+    width: 540px;
+    height: 430px;
+    img {
+      width: 540px;
+      height: 430px;
+      object-fit: cover;
+    }
+  }
+  &__thumb {
+    width: 540px;
+    display: flex;
+    justify-content: space-between;
+    //background: crimson;
+    column-gap: 30px;
+  }
+  &__thumb-item {
+    width: 160px !important;
+    height: 120px;
+    margin-right: 30px;
+    img {
+      width: 160px;
+      height: 120px;
+      object-fit: cover;
+    }
+    &:last-child {
+      margin-right: 0px;
+    }
+  }
+}
+.more-goods {
+  padding: 60px 0 120px;
+  &__wrap {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+.contacts {
+  padding: 33px 0 60px;
+  &__title {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #333;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+  &__wrap {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 59px;
+    border-bottom: 1px solid #d6d6d6;
+  }
+  &__item {
+    max-width: 255px;
+    width: 100%;
+  }
+  &__item-heading {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 140%;
+    color: #333;
+    margin-bottom: 25px;
+  }
+  &__inner {
+    display: flex;
+    justify-content: s;
+  }
+  &__inner-images {
+    margin-right: 10px;
+  }
+  &__list-item,
+  &__list-link {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    color: #333;
+    margin-bottom: 15px;
+    &:last-child{
+      margin-bottom: 0;
+    }
+  }
+}
 .footer {
   padding: 80px 0 20px;
 }
