--- a/css/style.css
+++ b/css/style.css
@@ -265,6 +265,10 @@ body {
   padding-top: 25px;
 }
 
+.header-nav__menu-btn {
+  display: none;
+}
+
 .header-nav__link {
   font-size: 14px;
   line-height: 150%;
@@ -1384,5 +1388,116 @@ body {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
   color: #333;
+}
+
+@media (max-width: 768px) {
+  .header-nav__link {
+    display: none;
+  }
+  .header-nav__account-links {
+    display: none;
+  }
+  .header-nav__menu-btn {
+    display: block;
+    width: 34px;
+    height: 30px;
+    position: relative;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    -webkit-transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out;
+    cursor: pointer;
+    overflow: hidden;
+  }
+  .header-nav__menu-btn span {
+    display: block;
+    position: absolute;
+    height: 4px;
+    width: 100%;
+    background: #fff;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    -webkit-transition: 0.25s ease-in-out;
+    transition: 0.25s ease-in-out;
+  }
+  .header-nav__menu-btn span:nth-child(1) {
+    top: 0px;
+  }
+  .header-nav__menu-btn span:nth-child(2) {
+    top: 12px;
+    width: 21px;
+  }
+  .header-nav__menu-btn span:nth-child(3) {
+    bottom: 0;
+  }
+  .header-nav__menu-btn.open span:nth-child(1) {
+    top: 13px;
+    -webkit-transform: rotate(135deg);
+            transform: rotate(135deg);
+  }
+  .header-nav__menu-btn.open span:nth-child(2) {
+    opacity: 0;
+    left: -60px;
+  }
+  .header-nav__menu-btn.open span:nth-child(3) {
+    top: 13px;
+    -webkit-transform: rotate(-135deg);
+            transform: rotate(-135deg);
+  }
+  .second-screen {
+    padding: 70px 0;
+  }
+  .second-screen__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 20px;
+  }
+  .second-screen__list-item + .second-screen__list-item {
+    margin-left: 0px;
+  }
+  .second-screen__category-item {
+    width: 324px;
+  }
+  .second-screen__category-images {
+    width: 324px;
+  }
+  .our-salon {
+    padding: 70px 0;
+  }
+  .blog {
+    padding: 60px 0;
+  }
+  .blog__item {
+    width: 679px;
+    height: 370px;
+  }
+  .blog__item-images {
+    opacity: 1;
+    width: 679px;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    height: 370px;
+  }
+  .blog .blog__item-text {
+    font-size: 29px;
+    bottom: 50%;
+  }
+  .gallery {
+    padding: 60px 0px;
+  }
+  .subscribe {
+    padding: 80px 0;
+  }
+  .footer {
+    padding: 60px 0 20px;
+  }
+  .footer-info {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    row-gap: 30px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
