--- a/scss/style.scss
+++ b/scss/style.scss
@@ -47,6 +47,9 @@
   justify-content: space-between;
   align-items: center;
   padding-top: 25px;
+  &__menu-btn{
+    display: none;
+  }
   &__link {
     @extend %gilroy-400;
     font-size: 14px;
