--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -101,6 +101,31 @@
     flex-wrap: wrap;
     row-gap: 30px;
   }
+  .product {
+    padding: 60px 0;
+  }
+  .product-filter {
+    &__form {
+      flex-direction: column;
+      row-gap: 20px;
+    }
+  }
+  .product-inner {
+    row-gap: 30px;
+  }
+  .product-card {
+    width: 330px;
+    &__images {
+      width: 258px;
+    }
+  }
+  .product-info {
+    padding: 60px 0;
+    &__content {
+      max-width: 250px;
+      margin-left: 25px;
+    }
+  }
 }
 @media (max-width: 375px) {
   .header {
@@ -170,16 +195,36 @@
       flex-direction: column;
       row-gap: 20px;
     }
-    &__label{
+    &__label {
       flex-direction: column;
     }
-    &__input{
+    &__input {
       margin: 0 auto 15px;
       max-width: 100%;
       width: 100%;
     }
   }
-  .footer-bottom{
+  .footer-bottom {
     flex-wrap: wrap;
+  }
+  .product-filter {
+    &__label {
+      width: 100%;
+    }
+    .jq-selectbox {
+      width: 100%;
+    }
+  }
+  .product-card {
+    width: 295px;
+    &__images{
+      width: 230px;
+    }
+  }
+  .product-info{
+    &__inner{
+      flex-direction: column;
+      row-gap: 60px;
+    }
   }
 }
